src/test/ui/closures/issue-52437.stderr
error: invalid label name `'static`
  --> $DIR/issue-52437.rs:2:13
   |
LL |     [(); &(&'static: loop { |x| {}; }) as *const _ as usize]
   |             ^^^^^^^

error[E0308]: mismatched types
  --> $DIR/issue-52437.rs:2:5
   |
LL | fn main() {
   |           - expected `()` because of default return type
LL |     [(); &(&'static: loop { |x| {}; }) as *const _ as usize]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found array `[(); _]`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
